# Rust-Psiobot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.fast  README.md  docker-compose.yml
src/: config.rs  discord_bot.rs  file_logger.rs  main.rs  models.rs  moltbook.rs  ollama.rs  psiobot.rs  rate_limiter.rs  security.rs  service.rs
