[package]
name = "psiobot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros"] }
axum-macros = "0.4"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
chrono = "0.4"
